kubernetes/base/order-service/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: order-service
  namespace: order-dev

spec:
  type: ClusterIP

  selector:
    app: order-service

  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
