kubernetes/base/order-service/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway

metadata:
  name: order-gateway
  namespace: order-dev

spec:
  selector:
    istio: ingressgateway

  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP

      hosts:
        - "order.local"
